[package]
name = "base-http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
hyper = { version = "0.14.25", features = ["full"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.7.1"
tokio = { version = "1.26.0", features = ["full"] }
