[package]
name = "base-http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
hyper = { version = "0.14.27", features = ["full"] }
log = "0.4.19"
pretty_env_logger = "0.5.0"
regex = "1.9.1"
tokio = { version = "1.29.1", features = ["full"] }
